--- a/style.css
+++ b/style.css
@@ -18,14 +18,18 @@ body {
 header {
     height: 50px;
     width: 100vw;
-    /* background-color: orange; */
-    position: relative;
+    position: fixed;
+    top:0;
+    z-index: 99;
+    background-color: black;
 }
 
-.header-icos {
-    position: absolute;
-    top: 5px;
-    right: 5px;
+.header-container {
+    height: 100%;
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+    padding-right: 0.2em;
 }
 
 header ul {
@@ -40,6 +44,11 @@ header ul {
     padding: 4px;
 }
 
+header a {
+    text-decoration: none;
+    color: white;
+}
+
 /* MAIN */
 
 main {
@@ -49,14 +58,35 @@ main {
 }
 
 .main-container {
-    max-width: 80%;
+    max-width: 90%;
     margin: 1em auto;
 }
 
 .cards-container {
     display: flex;
     flex-wrap: wrap;
-    flex: 1 1 calc((100% - GAP ) / 7);
+    gap: 1em;
+    flex: 1 1 calc((100% - 6em) / 7);
+}
+
+.card {
+    position: relative;
+}
+
+.img {
+    width: 200px;
+    height: 150px;
+    object-fit: cover;
+}
+
+main ul {
+    list-style: none;
+    display: flex;
+    gap: 0.5em;
+    position: absolute;
+    bottom: 0.3em;
+    background-color: rgba(0, 0, 0, 0.5);
+    padding: 0.5em;
 }
 
 /* FOOTER */
@@ -83,7 +113,7 @@ footer {
     display: flex;
     height: 100%;
     align-items: center;
-    margin-left:.5em;
+    margin-left:2em;
 }
 
 footer ul {
