--- a/style.css
+++ b/style.css
@@ -16,8 +16,8 @@ body {
 /* HEADER */
 
 header {
-    height: 50px;
-    width: 100vw;
+    width: 100%;
+    height: 70px;
     position: fixed;
     top:0;
     z-index: 99;
@@ -52,21 +52,24 @@ header a {
 /* MAIN */
 
 main {
-    margin: 50px 0 70px;
+    margin: 70px 0 70px;
     height: calc(100% - 50px - 70px);
     overflow-y: auto;
+    width: 100%;
 }
 
 .main-container {
-    max-width: 90%;
+    max-width: 95%;
+    min-width: 30%;
     margin: 1em auto;
 }
 
 .cards-container {
     display: flex;
     flex-wrap: wrap;
-    gap: 1em;
-    flex: 1 1 calc((100% - 6em) / 7);
+    justify-content: center;
+    gap: 0.5em;
+    flex: 1 1 calc(100% / 7);
 }
 
 .card {
@@ -74,8 +77,8 @@ main {
 }
 
 .img {
-    width: 200px;
-    height: 150px;
+    width: 280px;
+    height: 200px;
     object-fit: cover;
 }
 
@@ -93,7 +96,7 @@ main ul {
 
 footer {
     height: 70px;
-    width: 100vw;
+    width: 100%;
     background-color: rgb(35, 33, 35);
     position: fixed;
     bottom: 0;
