--- a/style.css
+++ b/style.css
@@ -52,16 +52,15 @@ header a {
 /* MAIN */
 
 main {
-    margin: 70px 0 70px;
-    height: calc(100% - 140px);
-    width: 100%;
+    height: calc(100vh - 70px - 70px);
+    /* margin: 70px 0 70px; */
+    overflow-y: auto;
+    margin: 70px auto 0;
 }
 
 .main-container {
-    overflow-y: auto;
     max-width: 95%;
-    min-width: 30%;
-    margin: 1em auto;
+    margin: 0 auto;
 }
 
 .cards-container {
