--- a/style.css
+++ b/style.css
@@ -53,13 +53,13 @@ header a {
 
 main {
     height: calc(100vh - 70px - 70px);
-    /* margin: 70px 0 70px; */
     overflow-y: auto;
     margin: 70px auto 0;
 }
 
 .main-container {
     max-width: 95%;
+    height: 100%;
     margin: 0 auto;
 }
 
@@ -68,7 +68,7 @@ main {
     flex-wrap: wrap;
     justify-content: center;
     gap: 0.5em;
-    flex: 1 1 calc(100% / 7);
+    flex: 1 1 calc((100% - 3rem) / 7);
 }
 
 .card {
@@ -76,8 +76,8 @@ main {
 }
 
 .img {
-    width: 280px;
-    height: 200px;
+    width: 300px;
+    height: 185.41px;
     object-fit: cover;
 }
 
